# S-SERIES

./: .gitignore  README.md
S1/: .gitignore  Q1.py  Q2.c  Q2.py  Q3.py  Q4.py  Q4_cal.py
S1/bench/: Cargo.toml
S1/bench/src/: main.rs
S1/brute/: Cargo.toml
S1/brute/src/: main.rs
S1/optimized_bench/: bench.c  bench.pyx  run.py  setup.py
S1/rainbow/: Cargo.toml
S1/rainbow/src/: main.rs
S1/rust-optimizer/: Cargo.toml  pyproject.toml
S1/rust-optimizer/python/: main.py
S1/rust-optimizer/src/: lib.rs
S4/: algorithm_performance.csv  decipher.py  dicipher.ipynb  openssl.ipynb  openssl_perf.py  openssl_performance.csv  openssl_speed_results.csv  vigrene.ipynb
S4/INBLOCK/: INBLOCK.ipynb
S4/vigrene/: Cargo.toml
S4/vigrene/src/: main.rs
S6/: hello
S6/Q1/: Q1  Q1.c  stackdiagram.html
S6/Q2/: Q2  Q2.c  wrapper.py
S6/Q3/: Q3  attack.py  victim
