[build-system]
requires = ["maturin>=0.14,<2.0"]
build-backend = "maturin"

[project]
name = "rainbow_table"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]